--- a/indexes/nsc1028/53.md
+++ b/indexes/nsc1028/53.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [【中共党史】配合苏联肢解中国 分裂新疆](../../pages/nsc1028/n13040700.md) 
 #### [周晓辉： 国企改革毁掉东北 肥了中共权贵集团](../../pages/nsc1028/n13039529.md) 
 #### [中共罪行录之三十：访民刘耀明之死](../../pages/nsc1028/n13038692.md) 
 #### [美国国父的教导：从历史中吸取无穷智慧](../../pages/nsc1028/n13036965.md) 
@@ -29,7 +30,6 @@
 #### [被遗忘的百年历史（V）2001至2005](../../pages/nsc1028/n13001609.md) 
 #### [中共罪行录之二十四：被冤杀的“伪乡长”](../../pages/nsc1028/n13015342.md) 
 #### [【名家专栏】人口炸弹突然成了人口泡沫](../../pages/nsc1028/n13012901.md) 
-#### [【中共党史】建党的罪恶本质：苏联豢养](../../pages/nsc1028/n13011888.md) 
 
 ---
 #### 第 [ [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) ] 页
