--- a/indexes/nsc1028/53.md
+++ b/indexes/nsc1028/53.md
@@ -1,5 +1,7 @@
 ### 纪元评论：以史为鉴
 ---
+#### [中共罪行录之三十一：邓星杞一家之死](../../pages/nsc1028/n13044327.md) 
+#### [湖南的农民运动——共产党农村土改运动的预演](../../pages/nsc1028/n13043864.md) 
 #### [【中共党史】配合苏联肢解中国 分裂新疆](../../pages/nsc1028/n13040700.md) 
 #### [周晓辉： 国企改革毁掉东北 肥了中共权贵集团](../../pages/nsc1028/n13039529.md) 
 #### [中共罪行录之三十：访民刘耀明之死](../../pages/nsc1028/n13038692.md) 
@@ -28,8 +30,6 @@
 #### [中共罪行录之二十五：87种害人招式](../../pages/nsc1028/n13018945.md) 
 #### [王友群：延安的1万5千个特务是怎么回事？](../../pages/nsc1028/n13016395.md) 
 #### [被遗忘的百年历史（V）2001至2005](../../pages/nsc1028/n13001609.md) 
-#### [中共罪行录之二十四：被冤杀的“伪乡长”](../../pages/nsc1028/n13015342.md) 
-#### [【名家专栏】人口炸弹突然成了人口泡沫](../../pages/nsc1028/n13012901.md) 
 
 ---
 #### 第 [ [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) ] 页
