--- a/indexes/nsc1028/53.md
+++ b/indexes/nsc1028/53.md
@@ -1,5 +1,7 @@
 ### 纪元评论：以史为鉴
 ---
+#### [被遗忘的百年历史（VII） 1949至2020](../../pages/nsc1028/n13001762.md) 
+#### [中共罪行录之三十二：一句话右派](../../pages/nsc1028/n13046662.md) 
 #### [中共罪行录之三十一：邓星杞一家之死](../../pages/nsc1028/n13044327.md) 
 #### [湖南的农民运动——共产党农村土改运动的预演](../../pages/nsc1028/n13043864.md) 
 #### [【中共党史】配合苏联肢解中国 分裂新疆](../../pages/nsc1028/n13040700.md) 
@@ -28,8 +30,6 @@
 #### [叶书：中共 “红船精神”真相 谎话连篇的党史](../../pages/nsc1028/n13020296.md) 
 #### [【中共党史】中共配合苏联侵略中国（上）](../../pages/nsc1028/n13020167.md) 
 #### [中共罪行录之二十五：87种害人招式](../../pages/nsc1028/n13018945.md) 
-#### [王友群：延安的1万5千个特务是怎么回事？](../../pages/nsc1028/n13016395.md) 
-#### [被遗忘的百年历史（V）2001至2005](../../pages/nsc1028/n13001609.md) 
 
 ---
 #### 第 [ [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) ] 页
