have a nice day!

--- a/indexes/nsc1025/104.md
+++ b/indexes/nsc1025/104.md
@@ -1,5 +1,7 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】就CAVPAC与蓬佩奥的谈话](../../pages/nsc1025/n13050942.md) 
+#### [美国不战而败：中国的国力是如何炼成的](../../pages/nsc1025/n13050981.md) 
 #### [田云：六月冰雹示警 中共七一前作恶不停](../../pages/nsc1025/n13049975.md) 
 #### [任重：七一前北京再入户调查人口 清查什么？](../../pages/nsc1025/n13050322.md) 
 #### [钟原：钟南山欲唱赞歌却泄漏实情](../../pages/nsc1025/n13050253.md) 
@@ -28,8 +30,6 @@
 #### [沈舟：英美F-35B首次从航母实战出击](../../pages/nsc1025/n13042852.md) 
 #### [【名家专栏】“觉醒”媒体对鲍威尔的诋毁](../../pages/nsc1025/n13042086.md) 
 #### [【纪元专栏】2021年国庆日 真的没什么值得庆祝的？](../../pages/nsc1025/n13042406.md) 
-#### [叶书：从132号小组到特供疫苗](../../pages/nsc1025/n13042658.md) 
-#### [【纪元专栏】大企业向政府要钱 成家常便饭](../../pages/nsc1025/n13013783.md) 
 
 ---
-#### 第 [ [103](./103.md) / [102](./102.md) / [101](./101.md) / [100](./100.md) / [99](./99.md) / [98](./98.md) / [97](./97.md) / [96](./96.md) ] 页
+#### 第 [ [104](./104.md) / [103](./103.md) / [102](./102.md) / [101](./101.md) / [100](./100.md) / [99](./99.md) / [98](./98.md) / [97](./97.md) ] 页
