--- a/indexes/nsc1028/53.md
+++ b/indexes/nsc1028/53.md
@@ -1,5 +1,9 @@
 ### 纪元评论：以史为鉴
 ---
+#### [中共罪行录之三十三：钦州剖腹食肝风](../../pages/nsc1028/n13050342.md) 
+#### [共产党在中国城市发动“反帝”革命运动（上）](../../pages/nsc1028/n13050025.md) 
+#### [杨箭：百年中共的百年罪恶](../../pages/nsc1028/n13049996.md) 
+#### [周恩来下令杀顾顺章家十多人是怎么回事？](../../pages/nsc1028/n13049849.md) 
 #### [被遗忘的百年历史（VII） 1949至2020](../../pages/nsc1028/n13001762.md) 
 #### [中共罪行录之三十二：一句话右派](../../pages/nsc1028/n13046662.md) 
 #### [中共罪行录之三十一：邓星杞一家之死](../../pages/nsc1028/n13044327.md) 
@@ -26,10 +30,6 @@
 #### [中共罪行录之二十七：为句真话劳改15年](../../pages/nsc1028/n13023054.md) 
 #### [中共罪行录之二十六：“文革”整人四大招](../../pages/nsc1028/n13020689.md) 
 #### [张菁：长征是溃败逃亡还是北上抗日？](../../pages/nsc1028/n13020585.md) 
-#### [苏共出钱出枪换取孙中山接纳中共“借壳上市”](../../pages/nsc1028/n13020354.md) 
-#### [叶书：中共 “红船精神”真相 谎话连篇的党史](../../pages/nsc1028/n13020296.md) 
-#### [【中共党史】中共配合苏联侵略中国（上）](../../pages/nsc1028/n13020167.md) 
-#### [中共罪行录之二十五：87种害人招式](../../pages/nsc1028/n13018945.md) 
 
 ---
 #### 第 [ [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) ] 页
