--- a/indexes/nsc1025/104.md
+++ b/indexes/nsc1025/104.md
@@ -1,5 +1,11 @@
 ### 纪元评论：时政评论
 ---
+#### [周晓辉：以江泽民为例 中共高官隐瞒秘密知多少](../../pages/nsc1025/n13052362.md) 
+#### [袁斌：这位85后为何羞于告诉别人他是党员？](../../pages/nsc1025/n13052380.md) 
+#### [石铭：迫害精英人士历来是中共的重点](../../pages/nsc1025/n13052108.md) 
+#### [程晓农：中共的疫苗研制暴露了什么？](../../pages/nsc1025/n13051596.md) 
+#### [组图：美军频示潜艇 海狼级现身 意在沛公](../../pages/nsc1025/n13051297.md) 
+#### [古风：中共借孔子学院向全球实施文化侵略](../../pages/nsc1025/n13051606.md) 
 #### [【名家专栏】就CAVPAC与蓬佩奥的谈话](../../pages/nsc1025/n13050942.md) 
 #### [美国不战而败：中国的国力是如何炼成的](../../pages/nsc1025/n13050981.md) 
 #### [田云：六月冰雹示警 中共七一前作恶不停](../../pages/nsc1025/n13049975.md) 
@@ -24,12 +30,6 @@
 #### [阳剑：中共焰花纷飞 百姓血泪流河](../../pages/nsc1025/n13045486.md) 
 #### [【名家专栏】北约最大威胁是中共不是俄罗斯](../../pages/nsc1025/n13044903.md) 
 #### [【有冇搞错】中共的“土猪拱白菜”](../../pages/nsc1025/n13044022.md) 
-#### [觅真：中共百年尽头，死期到矣！](../../pages/nsc1025/n13044372.md) 
-#### [王赫：西方联手芯片业加速“去中共化”](../../pages/nsc1025/n13043148.md) 
-#### [【名家专栏】COVID-19神秘起源引发担忧](../../pages/nsc1025/n13042112.md) 
-#### [沈舟：英美F-35B首次从航母实战出击](../../pages/nsc1025/n13042852.md) 
-#### [【名家专栏】“觉醒”媒体对鲍威尔的诋毁](../../pages/nsc1025/n13042086.md) 
-#### [【纪元专栏】2021年国庆日 真的没什么值得庆祝的？](../../pages/nsc1025/n13042406.md) 
 
 ---
 #### 第 [ [104](./104.md) / [103](./103.md) / [102](./102.md) / [101](./101.md) / [100](./100.md) / [99](./99.md) / [98](./98.md) / [97](./97.md) ] 页
