--- a/indexes/nsc1028/53.md
+++ b/indexes/nsc1028/53.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [颜智华：共产主义是国际恐怖主义](../../pages/nsc1028/n13052583.md) 
 #### [中共罪行录之三十三：钦州剖腹食肝风](../../pages/nsc1028/n13050342.md) 
 #### [共产党在中国城市发动“反帝”革命运动（上）](../../pages/nsc1028/n13050025.md) 
 #### [杨箭：百年中共的百年罪恶](../../pages/nsc1028/n13049996.md) 
@@ -29,7 +30,6 @@
 #### [中东路事件：中共配合苏联侵略中国（下）](../../pages/nsc1028/n13022783.md) 
 #### [中共罪行录之二十七：为句真话劳改15年](../../pages/nsc1028/n13023054.md) 
 #### [中共罪行录之二十六：“文革”整人四大招](../../pages/nsc1028/n13020689.md) 
-#### [张菁：长征是溃败逃亡还是北上抗日？](../../pages/nsc1028/n13020585.md) 
 
 ---
 #### 第 [ [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) ] 页
