--- a/indexes/nsc1035/51.md
+++ b/indexes/nsc1035/51.md
@@ -1,5 +1,6 @@
 ### 纪元评论：感悟随笔
 ---
+#### [人生规则的关键是个人责任](../../pages/nsc1035/n13053252.md) 
 #### [和风：消声的悲歌](../../pages/nsc1035/n13051994.md) 
 #### [清竹：神韵使关贵敏的艺术人生更加灿烂](../../pages/nsc1035/n13038731.md) 
 #### [影评：英雄的壮举（下）](../../pages/nsc1035/n13027438.md) 
@@ -29,7 +30,6 @@
 #### [曾慧燕：我曾在世贸大楼专访李洪志先生](../../pages/nsc1035/n12898729.md) 
 #### [四二五——巍巍丰碑](../../pages/nsc1035/n12893609.md) 
 #### [回忆十六年前被中共害死的父亲李茂勋](../../pages/nsc1035/n12880270.md) 
-#### [清流：二婶，我就要找一个炼法轮功的女友（上）](../../pages/nsc1035/n12879174.md) 
 
 ---
 #### 第 [ [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) / [44](./44.md) ] 页
