--- a/indexes/nsc1028/53.md
+++ b/indexes/nsc1028/53.md
@@ -1,5 +1,8 @@
 ### 纪元评论：以史为鉴
 ---
+#### [【百年透视】中共摧毁传统文化与道德](../../pages/nsc1028/n13057253.md) 
+#### [【中共党史】苏联扶共侵华阴谋的大揭发](../../pages/nsc1028/n13056050.md) 
+#### [【百年透视】中共暴政的杀人历史](../../pages/nsc1028/n13051791.md) 
 #### [颜智华：共产主义是国际恐怖主义](../../pages/nsc1028/n13052583.md) 
 #### [中共罪行录之三十三：钦州剖腹食肝风](../../pages/nsc1028/n13050342.md) 
 #### [共产党在中国城市发动“反帝”革命运动（上）](../../pages/nsc1028/n13050025.md) 
@@ -27,9 +30,6 @@
 #### [中共罪行录之二十八：切菜切出反革命](../../pages/nsc1028/n13030600.md) 
 #### [首位文革杀人犯的忏悔：革命逆天、人命关天](../../pages/nsc1028/n13030146.md) 
 #### [被遗忘的百年历史（VI）2001至2021](../../pages/nsc1028/n13001669.md) 
-#### [中东路事件：中共配合苏联侵略中国（下）](../../pages/nsc1028/n13022783.md) 
-#### [中共罪行录之二十七：为句真话劳改15年](../../pages/nsc1028/n13023054.md) 
-#### [中共罪行录之二十六：“文革”整人四大招](../../pages/nsc1028/n13020689.md) 
 
 ---
 #### 第 [ [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) ] 页
