have a nice day!

--- a/indexes/nsc1025/105.md
+++ b/indexes/nsc1025/105.md
@@ -1,5 +1,11 @@
 ### 纪元评论：时政评论
 ---
+#### [【有冇搞错】这两人差点灭了中共](../../pages/nsc1025/n13060028.md) 
+#### [川人：卖国起家邪恶百年，中共遭遇觉醒时代？](../../pages/nsc1025/n13060096.md) 
+#### [【百年透视】中共政权：黑帮+流氓+邪教](../../pages/nsc1025/n13058953.md) 
+#### [古风：中共追求“万国来朝”所引发的思考](../../pages/nsc1025/n13059886.md) 
+#### [王友群：红二代纷纷起来反抗中共暴政](../../pages/nsc1025/n13059388.md) 
+#### [夏林：中共百年之庆与百年之丑](../../pages/nsc1025/n13059334.md) 
 #### [李靖宇：《苹果》停刊港人力挺：跟中共比气长](../../pages/nsc1025/n13059098.md) 
 #### [杨威：G20外长会议再现中共外交窘境](../../pages/nsc1025/n13058834.md) 
 #### [【名家专栏】德国默克尔继任者向中共献媚](../../pages/nsc1025/n13058286.md) 
@@ -24,12 +30,6 @@
 #### [金言：百年红魔生死录](../../pages/nsc1025/n13054005.md) 
 #### [周晓辉：以江泽民为例 中共高官隐瞒秘密知多少](../../pages/nsc1025/n13052362.md) 
 #### [袁斌：这位85后为何羞于告诉别人他是党员？](../../pages/nsc1025/n13052380.md) 
-#### [石铭：迫害精英人士历来是中共的重点](../../pages/nsc1025/n13052108.md) 
-#### [程晓农：中共的疫苗研制暴露了什么？](../../pages/nsc1025/n13051596.md) 
-#### [组图：美军频示潜艇 海狼级现身 意在沛公](../../pages/nsc1025/n13051297.md) 
-#### [古风：中共借孔子学院向全球实施文化侵略](../../pages/nsc1025/n13051606.md) 
-#### [【名家专栏】就CAVPAC与蓬佩奥的谈话](../../pages/nsc1025/n13050942.md) 
-#### [美国不战而败：中国的国力是如何炼成的](../../pages/nsc1025/n13050981.md) 
 
 ---
-#### 第 [ [104](./104.md) / [103](./103.md) / [102](./102.md) / [101](./101.md) / [100](./100.md) / [99](./99.md) / [98](./98.md) / [97](./97.md) ] 页
+#### 第 [ [105](./105.md) / [104](./104.md) / [103](./103.md) / [102](./102.md) / [101](./101.md) / [100](./100.md) / [99](./99.md) / [98](./98.md) ] 页
