--- a/indexes/nsc1028/53.md
+++ b/indexes/nsc1028/53.md
@@ -1,5 +1,8 @@
 ### 纪元评论：以史为鉴
 ---
+#### [袁斌：中共是全世界杀人最多的刽子手党](../../pages/nsc1028/n13059947.md) 
+#### [【中共党史】中共武装割据中的苏联军援](../../pages/nsc1028/n13058998.md) 
+#### [【百年透视】中共是全世界最大的卖国党](../../pages/nsc1028/n13014567.md) 
 #### [【百年透视】中共摧毁传统文化与道德](../../pages/nsc1028/n13057253.md) 
 #### [【中共党史】苏联扶共侵华阴谋的大揭发](../../pages/nsc1028/n13056050.md) 
 #### [【百年透视】中共暴政的杀人历史](../../pages/nsc1028/n13051791.md) 
@@ -27,9 +30,6 @@
 #### [王友群：毛泽东的接班人王洪文之死](../../pages/nsc1028/n13032288.md) 
 #### [林辉：行刑时绞刑台上热搜 李大钊叛国罪难掩](../../pages/nsc1028/n13031965.md) 
 #### [【中共党史】中共配合苏联肢解中国（上）](../../pages/nsc1028/n13030262.md) 
-#### [中共罪行录之二十八：切菜切出反革命](../../pages/nsc1028/n13030600.md) 
-#### [首位文革杀人犯的忏悔：革命逆天、人命关天](../../pages/nsc1028/n13030146.md) 
-#### [被遗忘的百年历史（VI）2001至2021](../../pages/nsc1028/n13001669.md) 
 
 ---
 #### 第 [ [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) ] 页
