--- a/indexes/nsc993/55.md
+++ b/indexes/nsc993/55.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】中共百年斗遍了全中国人](../../pages/nsc993/n13060020.md) 
 #### [【网海拾贝】习近平为“党庆”拉普京壮胆](../../pages/nsc993/n13057781.md) 
 #### [【投书】湖南殷亮夫揭露共产党对自己一家人的迫害](../../pages/nsc993/n13057744.md) 
 #### [千百度：国民收入人均超1万美元？网民：搞笑！](../../pages/nsc993/n13057692.md) 
@@ -29,7 +30,6 @@
 #### [袁斌：50万美国人受奴役？网友打脸赵立坚](../../pages/nsc993/n13041330.md) 
 #### [颜纯钩：甘冒矢石竟粉身，于无声处听惊雷](../../pages/nsc993/n13041140.md) 
 #### [罗慰年：猪崇拜症](../../pages/nsc993/n13041071.md) 
-#### [【网海拾贝】共产党就是活生生的邪灵](../../pages/nsc993/n13036627.md) 
 
 ---
 #### 第 [ [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) ] 页
