--- a/indexes/nsc1028/53.md
+++ b/indexes/nsc1028/53.md
@@ -1,5 +1,8 @@
 ### 纪元评论：以史为鉴
 ---
+#### [【网海拾贝】中共的本质是两面派的骗子](../../pages/nsc1028/n13062711.md) 
+#### [袁斌：中共是全世界最爱撒谎的骗子党](../../pages/nsc1028/n13062650.md) 
+#### [被遗忘的百年历史（VIII）1949至2020](../../pages/nsc1028/n13048188.md) 
 #### [袁斌：中共是全世界杀人最多的刽子手党](../../pages/nsc1028/n13059947.md) 
 #### [【中共党史】中共武装割据中的苏联军援](../../pages/nsc1028/n13058998.md) 
 #### [【百年透视】中共是全世界最大的卖国党](../../pages/nsc1028/n13014567.md) 
@@ -27,9 +30,6 @@
 #### [叶书：中共百年“党罄” 高官叛逃吹响末日前奏](../../pages/nsc1028/n13034811.md) 
 #### [叶书：邓拓愚忠的遗言与江青“免责”辩护词](../../pages/nsc1028/n13033754.md) 
 #### [共产党的发展壮大与国民党内右派的反击（一）](../../pages/nsc1028/n13033620.md) 
-#### [王友群：毛泽东的接班人王洪文之死](../../pages/nsc1028/n13032288.md) 
-#### [林辉：行刑时绞刑台上热搜 李大钊叛国罪难掩](../../pages/nsc1028/n13031965.md) 
-#### [【中共党史】中共配合苏联肢解中国（上）](../../pages/nsc1028/n13030262.md) 
 
 ---
 #### 第 [ [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) ] 页
