have a nice day!

--- a/indexes/nsc1025/105.md
+++ b/indexes/nsc1025/105.md
@@ -1,5 +1,9 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】中共精心策划的谎言和收买](../../pages/nsc1025/n13065253.md) 
+#### [中美军力对比 差距到底多大（四）](../../pages/nsc1025/n13064742.md) 
+#### [田云：中共党庆洗脑片企图掩盖什么？](../../pages/nsc1025/n13064395.md) 
+#### [沈舟：歼-20参加党庆表演泄漏的秘密](../../pages/nsc1025/n13064143.md) 
 #### [【名家专栏】自2019年 美西地区房价上涨19%](../../pages/nsc1025/n13062264.md) 
 #### [【名家专栏】中共百年：饥荒、战争和镇压](../../pages/nsc1025/n13062268.md) 
 #### [韦拓：北京办百年党“喜” 反引灾祸嚎丧](../../pages/nsc1025/n13061153.md) 
@@ -26,10 +30,6 @@
 #### [【名家专栏】德国默克尔继任者向中共献媚](../../pages/nsc1025/n13058286.md) 
 #### [【名家专栏】不懂共产主义危害的美高级将领](../../pages/nsc1025/n13058271.md) 
 #### [周晓辉：中俄条约早自动延长 新声明藏玄机](../../pages/nsc1025/n13058785.md) 
-#### [袁斌：白色恐怖笼罩香港传媒界](../../pages/nsc1025/n13057635.md) 
-#### [古风：中共把“三大法宝”用到了美国](../../pages/nsc1025/n13057567.md) 
-#### [王友群：中共拽着俄罗斯 圆不了中共梦](../../pages/nsc1025/n13056718.md) 
-#### [【名家专栏】人民币升值或贬值的两难困境](../../pages/nsc1025/n13054458.md) 
 
 ---
 #### 第 [ [105](./105.md) / [104](./104.md) / [103](./103.md) / [102](./102.md) / [101](./101.md) / [100](./100.md) / [99](./99.md) / [98](./98.md) ] 页
