--- a/indexes/nsc1028/53.md
+++ b/indexes/nsc1028/53.md
@@ -1,5 +1,8 @@
 ### 纪元评论：以史为鉴
 ---
+#### [【百年透视】剖析中共洗脑术](../../pages/nsc1028/n13064830.md) 
+#### [袁斌：中共是全世界最野蛮霸道的强盗党](../../pages/nsc1028/n13064758.md) 
+#### [【百年透视】教科书里谎言知多少？](../../pages/nsc1028/n13064563.md) 
 #### [【网海拾贝】中共的本质是两面派的骗子](../../pages/nsc1028/n13062711.md) 
 #### [袁斌：中共是全世界最爱撒谎的骗子党](../../pages/nsc1028/n13062650.md) 
 #### [被遗忘的百年历史（VIII）1949至2020](../../pages/nsc1028/n13048188.md) 
@@ -27,9 +30,6 @@
 #### [【中共党史】中共配合苏联肢解中国（下）](../../pages/nsc1028/n13035660.md) 
 #### [共产党的发展壮大与国民党内右派的反击（二）](../../pages/nsc1028/n13033683.md) 
 #### [再现历史中的浮士德故事](../../pages/nsc1028/n13034638.md) 
-#### [叶书：中共百年“党罄” 高官叛逃吹响末日前奏](../../pages/nsc1028/n13034811.md) 
-#### [叶书：邓拓愚忠的遗言与江青“免责”辩护词](../../pages/nsc1028/n13033754.md) 
-#### [共产党的发展壮大与国民党内右派的反击（一）](../../pages/nsc1028/n13033620.md) 
 
 ---
 #### 第 [ [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) ] 页
