have a nice day!

--- a/indexes/nsc1025/106.md
+++ b/indexes/nsc1025/106.md
@@ -1,5 +1,10 @@
 ### 纪元评论：时政评论
 ---
+#### [陈思敏：一个央企书记戳了中共百年妆容](../../pages/nsc1025/n13067015.md) 
+#### [田云：中纪委最新反腐数据曝惊人腐败](../../pages/nsc1025/n13066352.md) 
+#### [周晓辉：长江世纪洪水是人祸 江泽民难逃罪责](../../pages/nsc1025/n13066769.md) 
+#### [【名家专栏】中共令人不安的核武集结](../../pages/nsc1025/n13065256.md) 
+#### [苦胆：不“共”戴天](../../pages/nsc1025/n13066040.md) 
 #### [滕彪：爱国爱党与反共反华](../../pages/nsc1025/n13065926.md) 
 #### [唐青：中共百年 习近平隔空大战“外来势力”](../../pages/nsc1025/n13065976.md) 
 #### [梁文韬：中共百年党庆下的政治打压 催生香港的“觉醒年代”](../../pages/nsc1025/n13065915.md) 
@@ -25,11 +30,6 @@
 #### [谢田：“中华民族伟大复兴”被窃用的后果](../../pages/nsc1025/n13061482.md) 
 #### [钟原：党庆无笑容和党员新数字的诡异](../../pages/nsc1025/n13061245.md) 
 #### [【有冇搞错】这两人差点灭了中共](../../pages/nsc1025/n13060028.md) 
-#### [川人：卖国起家邪恶百年，中共遭遇觉醒时代？](../../pages/nsc1025/n13060096.md) 
-#### [【百年透视】中共政权：黑帮+流氓+邪教](../../pages/nsc1025/n13058953.md) 
-#### [古风：中共追求“万国来朝”所引发的思考](../../pages/nsc1025/n13059886.md) 
-#### [王友群：红二代纷纷起来反抗中共暴政](../../pages/nsc1025/n13059388.md) 
-#### [夏林：中共百年之庆与百年之丑](../../pages/nsc1025/n13059334.md) 
 
 ---
-#### 第 [ [105](./105.md) / [104](./104.md) / [103](./103.md) / [102](./102.md) / [101](./101.md) / [100](./100.md) / [99](./99.md) / [98](./98.md) ] 页
+#### 第 [ [106](./106.md) / [105](./105.md) / [104](./104.md) / [103](./103.md) / [102](./102.md) / [101](./101.md) / [100](./100.md) / [99](./99.md) ] 页
