--- a/indexes/nsc1028/53.md
+++ b/indexes/nsc1028/53.md
@@ -1,5 +1,8 @@
 ### 纪元评论：以史为鉴
 ---
+#### [韩亦言：中国共产党的初心是什么？](../../pages/nsc1028/n13065420.md) 
+#### [【百年透视】抗击中共为何成为国际潮流？](../../pages/nsc1028/n13065845.md) 
+#### [【百年透视】中共为祸百年的深层原因](../../pages/nsc1028/n13065827.md) 
 #### [【百年透视】剖析中共洗脑术](../../pages/nsc1028/n13064830.md) 
 #### [袁斌：中共是全世界最野蛮霸道的强盗党](../../pages/nsc1028/n13064758.md) 
 #### [【百年透视】教科书里谎言知多少？](../../pages/nsc1028/n13064563.md) 
@@ -27,9 +30,6 @@
 #### [美国国父的教导：从历史中吸取无穷智慧](../../pages/nsc1028/n13036965.md) 
 #### [中共罪行录之二十九：没头的尸体一大片](../../pages/nsc1028/n13036513.md) 
 #### [林辉：中共三名高官叛逃带来的重创](../../pages/nsc1028/n13035206.md) 
-#### [【中共党史】中共配合苏联肢解中国（下）](../../pages/nsc1028/n13035660.md) 
-#### [共产党的发展壮大与国民党内右派的反击（二）](../../pages/nsc1028/n13033683.md) 
-#### [再现历史中的浮士德故事](../../pages/nsc1028/n13034638.md) 
 
 ---
 #### 第 [ [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) ] 页
