--- a/indexes/nsc1028/53.md
+++ b/indexes/nsc1028/53.md
@@ -1,5 +1,7 @@
 ### 纪元评论：以史为鉴
 ---
+#### [袁斌：中共是全世界最残暴无道的独裁党](../../pages/nsc1028/n13068366.md) 
+#### [王友群：出席中共一大的15人的最后结局](../../pages/nsc1028/n13067282.md) 
 #### [韩亦言：中国共产党的初心是什么？](../../pages/nsc1028/n13065420.md) 
 #### [【百年透视】抗击中共为何成为国际潮流？](../../pages/nsc1028/n13065845.md) 
 #### [【百年透视】中共为祸百年的深层原因](../../pages/nsc1028/n13065827.md) 
@@ -28,8 +30,6 @@
 #### [周晓辉： 国企改革毁掉东北 肥了中共权贵集团](../../pages/nsc1028/n13039529.md) 
 #### [中共罪行录之三十：访民刘耀明之死](../../pages/nsc1028/n13038692.md) 
 #### [美国国父的教导：从历史中吸取无穷智慧](../../pages/nsc1028/n13036965.md) 
-#### [中共罪行录之二十九：没头的尸体一大片](../../pages/nsc1028/n13036513.md) 
-#### [林辉：中共三名高官叛逃带来的重创](../../pages/nsc1028/n13035206.md) 
 
 ---
 #### 第 [ [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) ] 页
