--- a/indexes/nsc993/56.md
+++ b/indexes/nsc993/56.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [海阔天空——香港⼈·不羁放纵爱⾃由](../../pages/nsc993/n13069407.md) 
 #### [【网海拾贝】中共百年大庆令人想到纳粹](../../pages/nsc993/n13068483.md) 
 #### [【投书】贱党伪业——写在中共建党100年](../../pages/nsc993/n13067843.md) 
 #### [【投书】中共百年党庆个屁——习近平将亡于黄文才之手？](../../pages/nsc993/n13067425.md) 
@@ -29,7 +30,6 @@
 #### [魏京生：从中共高官叛逃说起](../../pages/nsc993/n13048997.md) 
 #### [【网海拾贝】港人雨中痛别《苹果日报》](../../pages/nsc993/n13048941.md) 
 #### [【网海拾贝】向所有苹果人致敬](../../pages/nsc993/n13046795.md) 
-#### [千百度：《苹果日报》不在了，但“苹果精神”长存](../../pages/nsc993/n13046703.md) 
 
 ---
-#### 第 [ [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) ] 页
+#### 第 [ [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) ] 页
