--- a/indexes/nsc1035/51.md
+++ b/indexes/nsc1035/51.md
@@ -1,5 +1,6 @@
 ### 纪元评论：感悟随笔
 ---
+#### [清竹：观小舞剧《龙门客栈》有感](../../pages/nsc1035/n13069850.md) 
 #### [养育孩子：平衡自由与安全的技巧](../../pages/nsc1035/n13054510.md) 
 #### [人生规则的关键是个人责任](../../pages/nsc1035/n13053252.md) 
 #### [和风：消声的悲歌](../../pages/nsc1035/n13051994.md) 
@@ -29,7 +30,6 @@
 #### [清竹：台湾显现的正能量在与苍穹同辉](../../pages/nsc1035/n12928084.md) 
 #### [陈思敏：四二五有感“中国本来可以是另一个样子”](../../pages/nsc1035/n12902318.md) 
 #### [曾慧燕：我曾在世贸大楼专访李洪志先生](../../pages/nsc1035/n12898729.md) 
-#### [四二五——巍巍丰碑](../../pages/nsc1035/n12893609.md) 
 
 ---
 #### 第 [ [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) / [44](./44.md) ] 页
