--- a/indexes/nsc993/56.md
+++ b/indexes/nsc993/56.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】除了暴力谎言，中共还剩什么？](../../pages/nsc993/n13071082.md) 
+#### [【投书】一个民营企业家的维权故事](../../pages/nsc993/n13070932.md) 
+#### [李春草：瑞鹧鸪 · 以“复兴”的名义](../../pages/nsc993/n13069984.md) 
 #### [海阔天空——香港⼈·不羁放纵爱⾃由](../../pages/nsc993/n13069407.md) 
 #### [【网海拾贝】中共百年大庆令人想到纳粹](../../pages/nsc993/n13068483.md) 
 #### [【投书】贱党伪业——写在中共建党100年](../../pages/nsc993/n13067843.md) 
@@ -27,9 +30,6 @@
 #### [理悟：毒誓难救命](../../pages/nsc993/n13051601.md) 
 #### [【网海拾贝】中共家法从未变也不会变](../../pages/nsc993/n13050366.md) 
 #### [千百度：警察升港府二号 网友：枪杆子政权来了](../../pages/nsc993/n13050261.md) 
-#### [魏京生：从中共高官叛逃说起](../../pages/nsc993/n13048997.md) 
-#### [【网海拾贝】港人雨中痛别《苹果日报》](../../pages/nsc993/n13048941.md) 
-#### [【网海拾贝】向所有苹果人致敬](../../pages/nsc993/n13046795.md) 
 
 ---
 #### 第 [ [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) ] 页
