--- a/indexes/nsc993/56.md
+++ b/indexes/nsc993/56.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】如果习仲勋现在还活着](../../pages/nsc993/n13073410.md) 
+#### [林泉：CCP及其百年后](../../pages/nsc993/n13073226.md) 
 #### [【网海拾贝】除了暴力谎言，中共还剩什么？](../../pages/nsc993/n13071082.md) 
 #### [【投书】一个民营企业家的维权故事](../../pages/nsc993/n13070932.md) 
 #### [李春草：瑞鹧鸪 · 以“复兴”的名义](../../pages/nsc993/n13069984.md) 
@@ -28,8 +30,6 @@
 #### [陈思敏：中共党庆烟花秀遮不住天有异相](../../pages/nsc993/n13052020.md) 
 #### [云鹤天：百年之后——中共外交部发言人答记者问](../../pages/nsc993/n13051604.md) 
 #### [理悟：毒誓难救命](../../pages/nsc993/n13051601.md) 
-#### [【网海拾贝】中共家法从未变也不会变](../../pages/nsc993/n13050366.md) 
-#### [千百度：警察升港府二号 网友：枪杆子政权来了](../../pages/nsc993/n13050261.md) 
 
 ---
 #### 第 [ [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) ] 页
