--- a/indexes/nsc993/56.md
+++ b/indexes/nsc993/56.md
@@ -1,5 +1,9 @@
 ### 纪元评论：自由广场
 ---
+#### [东方觉：荒唐国度荒唐事 雷人社会雷人语](../../pages/nsc993/n13075917.md) 
+#### [伍新：“滴滴”咋着没有啥 眼下唯有保命大](../../pages/nsc993/n13075894.md) 
+#### [颜纯钩：有暴政才有暴民，人民有权讨一个说法](../../pages/nsc993/n13075734.md) 
+#### [【网海拾贝】中共之中国与韭菜何干？](../../pages/nsc993/n13075428.md) 
 #### [【网海拾贝】如果习仲勋现在还活着](../../pages/nsc993/n13073410.md) 
 #### [林泉：CCP及其百年后](../../pages/nsc993/n13073226.md) 
 #### [【网海拾贝】除了暴力谎言，中共还剩什么？](../../pages/nsc993/n13071082.md) 
@@ -26,10 +30,6 @@
 #### [千百度：大陆网友吐槽核酸检测：窝了“一肚子火”](../../pages/nsc993/n13055194.md) 
 #### [吐为快：玉楼春 · 人不治天治](../../pages/nsc993/n13054028.md) 
 #### [千瑞：千古一孽](../../pages/nsc993/n13054016.md) 
-#### [【网海拾贝】新冠病毒溯源新发现直戳北京神经](../../pages/nsc993/n13052425.md) 
-#### [陈思敏：中共党庆烟花秀遮不住天有异相](../../pages/nsc993/n13052020.md) 
-#### [云鹤天：百年之后——中共外交部发言人答记者问](../../pages/nsc993/n13051604.md) 
-#### [理悟：毒誓难救命](../../pages/nsc993/n13051601.md) 
 
 ---
 #### 第 [ [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) ] 页
