--- a/indexes/nsc1028/54.md
+++ b/indexes/nsc1028/54.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [【中共党史】中共武装割据中的“红色基因”](../../pages/nsc1028/n13074576.md) 
 #### [共产党在中国城市发动“反帝”革命运动（下）](../../pages/nsc1028/n13076119.md) 
 #### [袁斌：中共是全世界最残暴无道的独裁党](../../pages/nsc1028/n13068366.md) 
 #### [王友群：出席中共一大的15人的最后结局](../../pages/nsc1028/n13067282.md) 
@@ -29,7 +30,6 @@
 #### [湖南的农民运动——共产党农村土改运动的预演](../../pages/nsc1028/n13043864.md) 
 #### [【中共党史】配合苏联肢解中国 分裂新疆](../../pages/nsc1028/n13040700.md) 
 #### [周晓辉： 国企改革毁掉东北 肥了中共权贵集团](../../pages/nsc1028/n13039529.md) 
-#### [中共罪行录之三十：访民刘耀明之死](../../pages/nsc1028/n13038692.md) 
 
 ---
-#### 第 [ [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) ] 页
+#### 第 [ [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) ] 页
