have a nice day!

--- a/indexes/nsc1025/108.md
+++ b/indexes/nsc1025/108.md
@@ -1,5 +1,10 @@
 ### 纪元评论：时政评论
 ---
+#### [陈思敏：滴滴党庆日顶风赴美上市的三大蹊跷](../../pages/nsc1025/n13080910.md) 
+#### [中美军力对比 差距到底多大（五）](../../pages/nsc1025/n13080052.md) 
+#### [杜耀明：武夫当道  特区强权政治变本加厉](../../pages/nsc1025/n13080333.md) 
+#### [谢田：碳定价碳税的左右搏击与大国博弈](../../pages/nsc1025/n13080309.md) 
+#### [周晓辉：滴滴下架等三大案背后疑涉高层权斗](../../pages/nsc1025/n13079332.md) 
 #### [杨威：中共高层还会误判多久？](../../pages/nsc1025/n13079823.md) 
 #### [王赫：从整肃滴滴谈中共“数据”政策动向](../../pages/nsc1025/n13079769.md) 
 #### [专栏作家：投资中企风险难测 华尔街终觉醒](../../pages/nsc1025/n13079366.md) 
@@ -25,11 +30,6 @@
 #### [英文大纪元编辑部撰文：为何要保卫美国？](../../pages/nsc1025/n13073902.md) 
 #### [千百度：“头破血流”的究竟是谁？](../../pages/nsc1025/n13073349.md) 
 #### [袁斌：中共是全世界最邪恶的魔鬼党](../../pages/nsc1025/n13073304.md) 
-#### [沈舟：美军对中共海军的最新评估](../../pages/nsc1025/n13072665.md) 
-#### [陈思敏：中共养党耗费多少全民财富？](../../pages/nsc1025/n13072257.md) 
-#### [王友群：中共百年之际 海外反对声音巨大](../../pages/nsc1025/n13072301.md) 
-#### [夏林：2021年后半年：疫情 疫苗 病毒溯源](../../pages/nsc1025/n13072504.md) 
-#### [【纪元专栏】与中共为伍 国家实验室的失败只是冰山一角](../../pages/nsc1025/n13072452.md) 
 
 ---
-#### 第 [ [107](./107.md) / [106](./106.md) / [105](./105.md) / [104](./104.md) / [103](./103.md) / [102](./102.md) / [101](./101.md) / [100](./100.md) ] 页
+#### 第 [ [108](./108.md) / [107](./107.md) / [106](./106.md) / [105](./105.md) / [104](./104.md) / [103](./103.md) / [102](./102.md) / [101](./101.md) ] 页
