--- a/indexes/nsc1026/51.md
+++ b/indexes/nsc1026/51.md
@@ -1,5 +1,6 @@
 ### 纪元评论：财经评论
 ---
+#### [专栏作家：投资中企风险难测 华尔街终觉醒](../../pages/nsc1026/n13079366.md) 
 #### [【美股瞭望】商品行情崩挫 科技股重回主流](../../pages/nsc1026/n13029798.md) 
 #### [【财经话题】当避险资产只剩下黄金上涨时](../../pages/nsc1026/n12975626.md) 
 #### [【谈股论金】比特币正示范金融市场泡沫破灭](../../pages/nsc1026/n12961769.md) 
@@ -29,7 +30,6 @@
 #### [陈思敏：十一黄金周消费揭“国内大循环”虚实](../../pages/nsc1026/n12468798.md) 
 #### [陈思敏：中国经济“内虚” 北京楼市一叶知秋](../../pages/nsc1026/n12464918.md) 
 #### [【谈股论金】华尔街为何如此喜爱川普](../../pages/nsc1026/n12460691.md) 
-#### [【纪元专栏】加拿大撒大钱 酿大错](../../pages/nsc1026/n12406564.md) 
 
 ---
 #### 第 [ [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) / [44](./44.md) ] 页
