--- a/indexes/nsc993/56.md
+++ b/indexes/nsc993/56.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [千百度：患者开颅中唱红歌？网友：恶心](../../pages/nsc993/n13080377.md) 
+#### [【网海拾贝】国际社会对台态度改变出乎中共预料](../../pages/nsc993/n13080968.md) 
+#### [【投书】卡尔：希望国际社会关注中国职校学生人权情况](../../pages/nsc993/n13080410.md) 
 #### [【网海拾贝】欧洲议会将通过动议抵制北京冬奥会](../../pages/nsc993/n13078156.md) 
 #### [千百度：缴费年限提高，网友：怕活不到领养老金那天](../../pages/nsc993/n13078088.md) 
 #### [颜纯钩：死结难解，前路难行，来日大难，危如累卵](../../pages/nsc993/n13077179.md) 
@@ -27,9 +30,6 @@
 #### [【网海拾贝】中共百年斗遍了全中国人](../../pages/nsc993/n13060020.md) 
 #### [【网海拾贝】习近平为“党庆”拉普京壮胆](../../pages/nsc993/n13057781.md) 
 #### [【投书】湖南殷亮夫揭露共产党对自己一家人的迫害](../../pages/nsc993/n13057744.md) 
-#### [千百度：国民收入人均超1万美元？网民：搞笑！](../../pages/nsc993/n13057692.md) 
-#### [【名家专栏】悲惨真相：活摘器官在中国](../../pages/nsc993/n13056611.md) 
-#### [【网海拾贝】中共祸国殃世界，必须铲除！](../../pages/nsc993/n13056011.md) 
 
 ---
 #### 第 [ [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) ] 页
