--- a/indexes/nsc1035/51.md
+++ b/indexes/nsc1035/51.md
@@ -1,5 +1,6 @@
 ### 纪元评论：感悟随笔
 ---
+#### [练就耐心带来的益处](../../pages/nsc1035/n13081876.md) 
 #### [一真：生命——个普通家庭的故事](../../pages/nsc1035/n13075782.md) 
 #### [清竹：观小舞剧《龙门客栈》有感](../../pages/nsc1035/n13069850.md) 
 #### [养育孩子：平衡自由与安全的技巧](../../pages/nsc1035/n13054510.md) 
@@ -29,7 +30,6 @@
 #### [造福社会和时代的法轮大法修炼人](../../pages/nsc1035/n12944018.md) 
 #### [川人：“世界法轮大法日”感怀](../../pages/nsc1035/n12932771.md) 
 #### [清竹：台湾显现的正能量在与苍穹同辉](../../pages/nsc1035/n12928084.md) 
-#### [陈思敏：四二五有感“中国本来可以是另一个样子”](../../pages/nsc1035/n12902318.md) 
 
 ---
 #### 第 [ [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) / [44](./44.md) ] 页
